@@ -4,30 +4,30 @@ import Decks.Deck;
 import Flashcards.FlashcardData;
 import Flashcards.Flashcard;
 
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.Map;
+import java.util.*;
 
 /**
  * A strategy on how to shuffle and select cards. SmartShuffle's strategy //TODO
  */
 public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
 
-    private final LinkedList<Flashcard> deckCopy;
+    private final List<Flashcard> deckCopy;
     private Flashcard lastFlashcardShown;
 
     /**
      * Constructs a new SmartShuffle shuffler using a preexisting map.
+     *
      * @param flashcardToData A mapping from Flashcard to FlashcardData taken from this shuffler's StudySession.
      */
     public SmartShuffle(Map<Flashcard, FlashcardData> flashcardToData) {
         this.flashcardToData = flashcardToData;
-        // This turns an ImmutableList, which ToList returns, to a LinkedList.
-        this.deckCopy = new LinkedList<>(this.flashcardToData.keySet().stream().toList());
+        // This turns an ImmutableList, which ToList returns, to an ArrayList.
+        this.deckCopy = new ArrayList<>(this.flashcardToData.keySet().stream().toList());
     }
 
     /**
      * Constructs a new SmartShuffle shuffler, initializing an empty mapping using deck.
+     *
      * @param deck The deck that this shuffler will use to create a Flashcard to FlashcardData mapping.
      */
     public SmartShuffle(Deck deck) {
@@ -37,31 +37,33 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
             this.flashcardToData.put(card, new FlashcardData(0));
         }
 
-        this.deckCopy = new LinkedList<>(this.flashcardToData.keySet().stream().toList());
+        this.deckCopy = new ArrayList<>(this.flashcardToData.keySet().stream().toList());
     }
 
     /**
      * Constructs a new SmartShuffle shuffler using a preexisting map.
-     * @param flashcardToData A mapping from Flashcard to FlashcardData taken from this shuffler's StudySession.
-     * @param deckCopy A list of flashcards which were copied from the original deck
+     *
+     * @param flashcardToData    A mapping from Flashcard to FlashcardData taken from this shuffler's StudySession.
+     * @param deckCopy           A list of flashcards which were copied from the original deck
      * @param lastFlashcardShown The last flashcard shown to the user
      */
-    public SmartShuffle(Map<Flashcard, FlashcardData> flashcardToData, LinkedList<Flashcard> deckCopy,
+    public SmartShuffle(Map<Flashcard, FlashcardData> flashcardToData, List<Flashcard> deckCopy,
                         Flashcard lastFlashcardShown) {
         this.flashcardToData = flashcardToData;
-        // This turns an ImmutableList, which ToList returns, to a LinkedList.
+        // This turns an ImmutableList, which ToList returns, to an ArrayList.
         this.deckCopy = deckCopy;
         this.lastFlashcardShown = lastFlashcardShown;
     }
 
     /**
      * Returns this shuffler's chosen flashcard based on this shuffler's choosing algorithm.
+     *
      * @return The flashcard that this shuffler chooses based on an algorithm.
      */
     @Override
     public Flashcard returnChosenFlashcard() {
-        this.lastFlashcardShown = this.deckCopy.getFirst();
-        return this.deckCopy.getFirst();
+        this.lastFlashcardShown = this.deckCopy.get(0);
+        return this.deckCopy.get(0);
     }
 
     /**
@@ -71,7 +73,7 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
     public void updateDeckContext() {
         for (Flashcard flashcard : this.flashcardToData.keySet()) {
             if (!this.deckCopy.contains(flashcard)) {
-                this.deckCopy.addLast(flashcard);
+                this.deckCopy.add(flashcard);
             }
         }
 
@@ -79,7 +81,7 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
     }
 
 
-    public LinkedList<Flashcard> getDeckCopy() {
+    public List<Flashcard> getDeckCopy() {
         return this.deckCopy;
     }
 
@@ -92,6 +94,7 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
      * Updates this shuffler's deckCopy to order it after the FlashcardData objects are updated in this.flashcardToData.
      * This method should be called after an answer is given by the user.
      * After this method is called, this shuffler's returnChosenFlashcard method is ready to be called again.
+     *
      * @param wasCorrect Whether the user was correct or not when reviewing this.lastFlashcardShown
      */
     @Override
@@ -111,7 +114,7 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
 
         if (currFlashcardIndex + stepsToSendBackward >= this.deckCopy.size()) {
             // send currentFlashcard to the back
-            this.deckCopy.addLast(this.lastFlashcardShown);
+            this.deckCopy.add(this.lastFlashcardShown);
             this.deckCopy.remove(currFlashcardIndex);
             // System.out.println("Sent to the back");
         } else {
@@ -125,6 +128,7 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
 
     /**
      * Updates this shuffler's FlashcardData after an answer is graded.
+     *
      * @param wasCorrect Whether the user was correct or not when reviewing this.lastFlashcardShown
      */
     public void updateFlashcardData(boolean wasCorrect) {
@@ -141,8 +145,6 @@ public class SmartShuffle extends CardShuffler implements UpdatingShuffler {
             currFlashcardData.setCardsUntilDue(currFlashcardData.getCardsUntilDue() + 3);
         }
     }
-
-
 
 
 }
